--- a/src/stylesheet/sass/section/_about.scss
+++ b/src/stylesheet/sass/section/_about.scss
@@ -4,7 +4,7 @@
 
 #about {
   position: relative;
-  z-index: 20;
+  // z-index: 20;
 
   & #stopwatch-column {
     & path#stopwatch-hand {
