--- a/src/stylesheet/sass/section/_event.scss
+++ b/src/stylesheet/sass/section/_event.scss
@@ -43,7 +43,7 @@
   & #event-bottom-mask,
   & #event-top-mask {
     position: relative;
-    z-index: 10;
+    // z-index: 10;
   }
 
   & #event-bottom-mask {
